--- a/index.html
+++ b/index.html
@@ -128,6 +128,18 @@
     <script async="" src="https://script.hotjar.com/modules.28e3191d8757c557b4b7.js" charset="utf-8">
     </script>
 
+<!-- Hotjar Tracking Code for https://alexbrettschneider.github.io/Vinos/ -->
+    <script>
+        (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid:3768565,hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+
     <link rel="stylesheet" type="text/css" href="//downloads.mailchimp.com/css/signup-forms/popup/6675e00155e1281975ccc7b9b2a07036bb1418ea/modal.css" media="all"><style type="text/css" id=""></style>
 </head>
 <body id="index" class="lang-es country-es currency-eur layout-full-width page-index tax-display-enabled notouch" style="zoom: 1; overflow: auto;"><div class="tingle-modal tingle-modal--noOverlayClose custom-class-1 custom-class-2" style="display: none;"><button class="tingle-modal__close"><span>×</span><span class="tingle-modal__closeLabel">Close</span></button><div class="tingle-modal-box"><div class="tingle-modal-box__content"><div>
